...
        }
    }

    fun parsePath(currentPath: String): List<PathSegment> {
        return when {
            currentPath == "/" -> listOf(
                PathSegment.Location(LocationType.HOME, "Home", Icons.Default.Home, ""),
                PathSegment.StorageRoot(
                    StorageType.FILESYSTEM_ROOT,
                    "Root",
                    Icons.Default.Android,
                    "/",
                    requiresRoot = true
...
